🎨 fix code formatting and whitespace

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -23,10 +23,9 @@
   padding-inline: 20px;
   box-shadow: inset 0 0 0 2px rgba(192, 255, 216, 0.1);
   background: linear-gradient(90deg,
-    #de9acb 0%,
-    #f5b4e2 50%,
-    #efafdf 100%
-  );
+      #de9acb 0%,
+      #f5b4e2 50%,
+      #efafdf 100%);
 }
 
 @mixin experience-tag {
@@ -38,8 +37,7 @@
   border-radius: 20px;
   box-shadow: inset 0 0 0 2px rgba(192, 255, 216, 0.1);
   background: linear-gradient(90deg,
-    #c8f6de 0%,
-    #d1fae5 30%,
-    #e2fbef 100%
-  );
+      #c8f6de 0%,
+      #d1fae5 30%,
+      #e2fbef 100%);
 }
